sculpting error with stencil mapping of texture #41893

Closed
opened 2014-09-21 10:32:12 +02:00 by Alexey · 12 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
stencil1.png
stencil2.png
Exact steps for others to reproduce the error
open this,sculpt_stencil_mapping_error.blend
close brush texture, and select again, scale, rotate or move stencil and we will see incorrect
change of intencity

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![stencil1.png](https://archive.blender.org/developer/F111445/stencil1.png) ![stencil2.png](https://archive.blender.org/developer/F111447/stencil2.png) **Exact steps for others to reproduce the error** open this,[sculpt_stencil_mapping_error.blend](https://archive.blender.org/developer/F111449/sculpt_stencil_mapping_error.blend) close brush texture, and select again, scale, rotate or move stencil and we will see incorrect change of intencity
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-09-21 10:32:12 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Alexey was unassigned by Bastien Montagne 2014-09-21 10:49:12 +02:00
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-09-21 10:49:12 +02:00
Member

Added subscribers: @Psy-Fi, @JulianEisel

Added subscribers: @Psy-Fi, @JulianEisel
Member

The the bug is that the node preview or the image texture is affected by the brush setting? @Psy-Fi, If so, do you have any idea on how to fix this properly in the near future? (And maybe this should go to the todo list?)

The the bug is that the node preview or the image texture is affected by the brush setting? @Psy-Fi, If so, do you have any idea on how to fix this properly in the near future? (And maybe this should go to the todo list?)

This issue was referenced by 2775eaf01a

This issue was referenced by 2775eaf01a87c68f2e092152429774017276b2f9

Added subscriber: @brecht

Added subscriber: @brecht

Committed a fix now, it's not perfect but the color management here is weak already, and it should solve the issue for the most common case.

Committed a fix now, it's not perfect but the color management here is weak already, and it should solve the issue for the most common case.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2775eaf01a.

Closed by commit 2775eaf01a.
Author

I have 2.74 but this bug is active

I have 2.74 but this bug is active

The fix will be in 2.75. Or are you seeing the bug in a recent development build still?
https://builder.blender.org/download/

The fix will be in 2.75. Or are you seeing the bug in a recent development build still? https://builder.blender.org/download/
Author

In #41893#307634, @brecht wrote:
The fix will be in 2.75. Or are you seeing the bug in a recent development build still?
https://builder.blender.org/download/

in dc95ca9 working properly

> In #41893#307634, @brecht wrote: > The fix will be in 2.75. Or are you seeing the bug in a recent development build still? > https://builder.blender.org/download/ in dc95ca9 working properly
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41893
No description provided.