Fix T41893: inconsistent color management on sculpt texture nodes previews.